# dotfiles

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .stow-local-ignore  .wezterm.lua  .xinitrc  .zshrc  README.md  flake.nix  justfile  msg.txt  packages.sh
.config/: starship.toml
.config/git/: config
.config/home-manager/: apps.nix  build.sh  desktop.nix  flake.nix  games.nix  home.nix  mac.nix  nvim.nix
.config/home-manager.bak/: build.sh
.config/hypr/: appearance.conf  env.conf  hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  input.conf  keybinds.conf  monitors.conf  programs.conf  windows.conf
.config/kitty/: gruvbox-material-dark-hard.conf  kitty.conf
.config/nvim/: init.lua  lazy-lock.json
.config/rofi/: catppuccin-frappe.rasi  config.rasi
.config/waybar/: config.jsonc  everforest.css  style.css
.config/wofi/: config  style.css
.github/: dependabot.yml
.github/workflows/: ci.yml  update-locks.yml
Wallpapers/: generate.sh
darwin/: NIX_ARCHITECTURE.md  flake.nix
drift/: Cargo.toml
drift/src/: brew.rs  closure.rs  compare.rs  config.rs  defaults.rs  domain.rs  lib.rs  main.rs  nixlock.rs  parse.rs  pref.rs  system.rs  util.rs
home-manager/: build-mac.sh  flake.nix
home-manager/global/: apps.nix  colors.nix  home.nix  nvim.nix  shell.nix
home-manager/mac/: home.nix  personal.nix  work.nix
home-manager/nixos/: apps.nix  (+4 more)
languages/: README.md
niri/: config.kdl
nix_darwin/: darwin.nix  flake.nix
nixos/: flake.nix
nvim/: init.lua  lazy-lock.json  nvim-pack-lock.json
starship/: starship.toml
tmux/: tmux.conf
(+108 files in other folders)
