[package]
name = "drift"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Detect drift between the declared nix config (nix-darwin / NixOS / home-manager / flake) and what's actually hydrated on this machine"

[lib]
name = "drift"
path = "src/lib.rs"

[[bin]]
name = "drift"
path = "src/main.rs"

# Library (pure domain logic) uses structured errors; the binary uses eyre.
[dependencies]
plist = "1"
regex = "1"
thiserror = "2"

clap = { version = "4", features = ["derive"] }
eyre = "0.6"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

[profile.release]
opt-level = 2
